--- a/templates/ramen/index.html.twig
+++ b/templates/ramen/index.html.twig
@@ -1,20 +1,43 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {{ controller_name }}!{% endblock %}
+{% block title %}Ramen index{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Ramen index</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Photo</th>
+                <th>Description</th>
+                <th>Ingrediants</th>
+                <th>Pricerange</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for raman in ramens %}
+            <tr>
+                <td>{{ raman.id }}</td>
+                <td>{{ raman.name }}</td>
+                <td>{{ raman.photo }}</td>
+                <td>{{ raman.description }}</td>
+                <td>{{ raman.ingrediants }}</td>
+                <td>{{ raman.pricerange }}</td>
+                <td>
+                    <a href="{{ path('ramen_show', {'id': raman.id}) }}">show</a>
+                    <a href="{{ path('ramen_edit', {'id': raman.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="7">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+    <a href="{{ path('ramen_new') }}">Create new</a>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>src/Controller/RamenController.php</code></li>
-        <li>Your template at <code>templates/ramen/index.html.twig</code></li>
-    </ul>
-</div>
 {% endblock %}
