--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -11,7 +11,7 @@
                 <th>Id</th>
                 <th>Username</th>
                 <th>Password</th>
-                <th>Role</th>
+                <th>Roles</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -21,7 +21,10 @@
                 <td>{{ user.id }}</td>
                 <td>{{ user.username }}</td>
                 <td>{{ user.password }}</td>
-                <td>{{ user.role }}</td>
+                <td>{% for role in user.roles %}
+                        {{ role }},
+                    {% endfor %}
+                </td>
                 <td>
                     <a href="{{ path('user_show', {'id': user.id}) }}">show</a>
                     <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
