Linked review and ramen entities

--- a/templates/ramen/show.html.twig
+++ b/templates/ramen/show.html.twig
@@ -31,6 +31,10 @@
             <th>Pricerange</th>
             <td>{{ raman.pricerange }}</td>
         </tr>
+        <tr>
+            <th>Score</th>
+            <td>{{ raman.score }}</td>
+        </tr>
 
     </table>
 
