--- a/templates/ramen/index.html.twig
+++ b/templates/ramen/index.html.twig
@@ -14,6 +14,7 @@
                 <th>Description</th>
                 <th>Ingrediants</th>
                 <th>Pricerange</th>
+                <th>Score</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -26,6 +27,7 @@
                 <td>{{ raman.description }}</td>
                 <td>{{ raman.ingrediants }}</td>
                 <td>{{ raman.pricerange }}</td>
+                <td>{{ raman.score }}</td>
                 <td>
                     <a href="{{ path('ramen_show', {'id': raman.id}) }}">show</a>
                     <a href="{{ path('ramen_edit', {'id': raman.id}) }}">edit</a>
@@ -33,7 +35,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="7">no records found</td>
+                <td colspan="8">no records found</td>
             </tr>
         {% endfor %}
         </tbody>
