--- a/templates/review/show.html.twig
+++ b/templates/review/show.html.twig
@@ -39,6 +39,10 @@
             <th>Public</th>
             <td>{{ review.public ? 'Yes' : 'No' }}</td>
         </tr>
+        <tr>
+            <th>Ramen</th>
+            <td>{{ review.ramen.name }}</td>
+        </tr>
 
     </table>
 
