--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,20 +1,36 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {{ controller_name }}!{% endblock %}
-
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1> Home page </h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h2> Ramen list</h2>
+    <hr>
+    {% for ramen in ramens %}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>src/Controller/DefaultController.php</code></li>
-        <li>Your template at <code>templates/default/index.html.twig</code></li>
-    </ul>
-</div>
+        <h3> {{ ramen.name }}</h3>
+        <p> {{ ramen.description }}</p>
+
+        <p>
+            Ingredients:
+            {{ ramen.ingrediants }}
+        </p>
+
+        <p>
+            Price range:
+            {{ ramen.pricerange }}
+        </p>
+
+        <p>
+            {{ ramen.photo }}
+        </p>
+
+        {% for review in reviews %}
+            {% if review.ramen.id == ramen.id %}
+                <a href="{{ url('review_show', {'id':review.id }) }}"> review</a>
+            {% endif %}
+        {% endfor %}
+        <hr>
+
+    {% endfor %}
+
 {% endblock %}
