--- a/templates/review/publicshow.html.twig
+++ b/templates/review/publicshow.html.twig
@@ -52,13 +52,7 @@
 
     </table>
 
-    <a href="{{ path('review_index') }}">back to list</a>
+    <a href="{{ path('default') }}">Back to Home</a>
 
-    {% if review.user.id == user.id or user.roles[0] == "ROLE_ADMIN" %}
-        <a href="{{ path('review_edit', {'id': review.id}) }}">edit</a>
-
-        {% include 'review/_delete_form.html.twig' with {'identifier': review.id} only %}
-
-    {% endif %}
 
 {% endblock %}
