--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,15 +24,31 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class = "navbar-nav ml-auto">
-                    <li class ="nav-item">
-                        <a style="color: #fff;" class="nav-link" href="{{ url('ramen_index' ) }}">Ramen List</a>
-                    </li>
-                    <li class ="nav-item">
-                        <a style="color: #fff;" class="nav-link" href="{{ url('review_index' ) }}">Review List</a>
-                    </li>
-                    <li class ="nav-item">
-                        <a style="color: #fff;" class="nav-link" href="{{ url('user_index' ) }}">User List</a>
-                    </li>
+
+
+
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <li class ="nav-item">
+                            <a style="color: #fff;" class="nav-link" href="{{ url('user_index' ) }}">User List</a>
+                        </li>
+                    {% endif %}
+                    {% if is_granted('ROLE_USER') %}
+                        <li class ="nav-item">
+                            <a style="color: #fff;" class="nav-link" href="{{ url('ramen_index' ) }}">Ramen List</a>
+                        </li>
+                        <li class ="nav-item">
+                            <a style="color: #fff;" class="nav-link" href="{{ url('review_index' ) }}">Review List</a>
+                        </li>
+                        <li class ="nav-item">
+                            <a style="color: #fff;" class="nav-link" href="{{ url('logout' ) }}">Logout</a>
+                        </li>
+                    {% else %}
+                        <li class ="nav-item">
+                            <a style="color: #fff;" class="nav-link" href="{{ url('login' ) }}">Login</a>
+
+                        </li>
+                    {% endif %}
+
 
                 </ul>
             </div>
