Added photos and stars

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -22,8 +22,7 @@
         </p>
 
         <p>
-            {{ ramen.photo }}
-        </p>
+            <img class="items" src="/images/{{ ramen.photo }}" alt="{{ ramen.photo }}">
         <p>
         Reviews:
             {% for review in reviews %}
