--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,6 +31,9 @@
                         <li class ="nav-item">
                             <a style="color: #fff;" class="nav-link" href="{{ url('user_index' ) }}">User List</a>
                         </li>
+                        <li class ="nav-item">
+                            <a style="color: #fff;" class="nav-link" href="{{ url('admin' ) }}">Admin Panel</a>
+                        </li>
                     {% endif %}
                     {% if is_granted('ROLE_USER') %}
                         <li class ="nav-item">
